syntax = "proto3";

option go_package = "hq.0xa1.red/axdx/phaseball/internal/service";

message TeamSheet {
    string Name = 1;
    string Players = 2; // json
}

message GameRequest {
    string Timestamp = 1;
    string GameID = 2;
    TeamSheet Away = 3;
    TeamSheet Home = 4;
}

message MatchResults {
    int32 Status = 1;
    string GameID = 2;
    string Log = 3;
    // TODO: add box score
}

service MatchSimulator {
    rpc SimulateGame(GameRequest) returns(MatchResults);
}